# FastAPI_Zero

./: .gitignore  pyproject.toml
fast_api_zero/: app.py  schemas.py
tests/: test_app.py
