[tool.poetry]
name = "fast-api-zero"
version = "0.1.0"
description = ""
authors = ["JuniorD-Isael <isaeldjunior@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
fastapi = {extras = ["standard"], version = "^0.112.1"}


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.1"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
taskipy = "^1.13.0"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = "single"

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warning'

[tool.taskipy.tasks]
run = "fastapi dev fast_api_zero/app.py"
# inicio do teste
pre_test = 'task lint'
test = "pytest --cov=fast_api_zero -vv"
post_test = 'coverage html'
# fim do teste
lint = "ruff check . && ruff check . --diff"
format = "ruff check . --fix && ruff format ."

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
